infra/hetzner-k8s/k8s/app/deploy-webhook-rate-limit-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: deploy-webhook-rate-limit
  namespace: app-prod
spec:
  rateLimit:
    average: 2
    burst: 10
    period: 1s
