infra/hetzner-k8s/k8s/app/deploy-webhook-request-buffer-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: deploy-webhook-request-buffer
  namespace: app-prod
spec:
  buffering:
    maxRequestBodyBytes: 1048576
    memRequestBodyBytes: 1048576
