infra/hetzner-k8s/k8s/app/telemetry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-external
  namespace: app-prod
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000

---
apiVersion: v1
kind: Endpoints
metadata:
  name: telemetry-external
  namespace: app-prod
subsets:
  - addresses:
      - ip: 10.255.0.2
    ports:
      - name: http
        port: 3000
        protocol: TCP
